samples/_failures_safe/1761246865_cc706b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e9a06b12.c: In function ‘main’:
./samples/SAFE/__tmp_e9a06b12.c:162:36: error: expected ‘)’ at end of input
  162 |         printf(" -> '%s'\n", tokens
      |               ~                    ^
      |                                    )
./samples/SAFE/__tmp_e9a06b12.c:162:9: error: expected declaration or statement at end of input
  162 |         printf(" -> '%s'\n", tokens
      |         ^~~~~~
./samples/SAFE/__tmp_e9a06b12.c:162:9: error: expected declaration or statement at end of input
